# gateway-ng-controller

./: .gitmodules  Cargo.toml  Makefile  Readme.md  build.rs
src/: cache.rs  configuration.rs  envoy.rs  envoy_cds.rs  envoy_helpers.rs  main.rs  service.rs
src/protobuf/: envoy.annotations.rs  envoy.config.cluster.v3.rs  envoy.config.core.v3.rs  envoy.config.endpoint.v3.rs  envoy.r#type.matcher.v3.rs  envoy.r#type.v3.rs  envoy.service.cluster.v3.rs  envoy.service.discovery.v3.rs  udpa.annotations.rs  udpa.core.v1.rs
