[package]
name = "gateway-ng-controller"
version = "0.1.0"
authors = ["Eloy Coto <eloy.coto@acalustra.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

async-stream = "0.2"
futures = { version = "0.3", default-features = false, features = ["alloc"] }
log = "0.4.11"
prost = { version = "0.6", default-features = false, features = ["prost-derive"] }
prost-types = { version = "0.6", default-features = false }
tokio = { version = "0.2", features = ["macros"] }
tokio-timer = "0.2.13"
tonic = "0.3"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
lazy_static = "1.4.0"

[build-dependencies]
tonic-build = "0.3"
